--- a/ASPCoreToDo/ASPCoreToDo.csproj
+++ b/ASPCoreToDo/ASPCoreToDo.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToDo_API\ToDo_API.csproj" />
+    <ProjectReference Include="..\ToolBox\ToolBox.csproj" />
   </ItemGroup>
 
 
